update index.html api address

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>API</h1>
-    <p>Please use https://tree-api-bh.herokuapp.com/</p>
+    <p>Please use https://tree-api-bh.herokuapp.com/api</p>
 </body>
 </html>
